# FAU_RABBIT_CELERY

./: .dockerignore  .gitignore  RMQ_pika_config.py  RMQ_pika_consumer.py  RMQ_pika_publisher.py  check_port.py  docker-compose.yaml  pyproject.toml
celery_broker/: celery_app.py  get_task_status.py  send_emails.py  tasks.py
proj6/: .env  app_run.py  main.py
proj6/admin/: __init__.py  access_token_admin.py  converter.py  user.py
proj6/alembic/: env.py
proj6/api/: __init__.py
proj6/core/: __init__.py  config.py  database.py  nats_broker.py  taskiq_broker.py
proj6/fs_nats_sub/: fs_app.py  users.py
proj6/taskiq_utils/: welcome_email_notification.py
proj6/tasks/: __init__.py  welcome_email_notification.py
proj6/templates/: index.html  users.html
proj6/utils/: send_email.py  send_welcome_email.py
proj6/utils_aiosmptlib/: send_email.py
proj6/utils_aiosmptlib_web/: send_email_confirmation.py  send_verification_email.py  send_welcome_email.py
proj6/utils_email_jinja/: send_email.py  send_email_confirmation.py  send_verification_email.py  send_welcome_email.py  web_template.py
proj6/views/: __init__.py  home.py  verification.py
proj6/web_templates/: base.html  base_home.html  confirm_email_verification.html  (+3 more)
rabbit/: RMQ_config.py  RMQ_pika_config.py  RMQ_pika_consumer.py  RMQ_pika_consumer_dlq.py  RMQ_pika_consumer_kyc.py  RMQ_pika_consumer_newsletter.py  RMQ_pika_consumer_weather.py  RMQ_pika_consumer_weather_expired.py  RMQ_pika_producer_email.py  RMQ_pika_publisher.py  RMQ_pika_publisher_dlq.py  RMQ_pika_publisher_weather.py  __init__.py  base.py
(+45 files in other folders)
